Zooker kerberos support
Existing zookeeper connect was using default connection that will require  world r/w/c/d access on the root node

This change will require kazoo 2.6.1+ and kerberos to be imported by the calling program

--- a/postgres0.yml
+++ b/postgres0.yml
@@ -19,6 +19,10 @@ restapi:
 etcd:
   host: 127.0.0.1:2379
 
+# zookeeper:
+#   krbsrvname: zkdev
+#   hosts: 127.0.0.1:2379
+
 bootstrap:
   # this section will be written into Etcd:/<namespace>/<scope>/config after initializing new cluster
   # and all other cluster members will use it as a `global configuration`
